--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,23 +5,35 @@
 body {
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: rgb(40, 40, 40);
-  padding-top: 50px;
+  align-items: start;
+  background: linear-gradient(155deg, rgb(1, 48, 67) 0%, rgb(2, 74, 99) 36%, rgb(12, 123, 140) 100%);
+  height: 100vh;
 }
 
 h1 {
   color: red;
+  margin: 40px;
+  font-size: 48px;
+  font-weight: bolder;
+}
+
+h2 {
+  color: #076f7f;
+  text-align: center;
+}
+
+section {
+  background-color: #f7a48b;
+  margin: 20px;
+  border-radius: 5%;
 }
 
 .contenedor {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 800px; /* Cambia el valor a la anchura deseada */
-  height: 100%; /* Cambia el valor a la altura deseada */
   border-radius: 5%;
-  margin-top: 30px;
+  margin: 10px;
 }
 .contenedor div {
   display: flex;
