--- a/assets/scss/_generales.scss
+++ b/assets/scss/_generales.scss
@@ -4,7 +4,7 @@
 body {
 	display: flex;
 	justify-content: center;
-	align-items: center;
-	background-color: rgb(40, 40, 40);
-	padding-top: 50px;
+	align-items: start;
+	background: linear-gradient(155deg, rgb(1, 48, 67) 0%, rgb(2, 74, 99) 36%, rgb(12, 123, 140) 100%);
+	height: 100vh;
 }
