--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,11 +10,39 @@ body {
   height: 100vh;
 }
 
-h1 {
+#modalLabel {
+  font-weight: bolder;
+}
+
+.h1title {
   color: red;
-  margin: 40px;
+  margin: 20px;
   font-size: 48px;
   font-weight: bolder;
+}
+.h1title a {
+  text-decoration: none;
+  color: red;
+}
+
+.filtros {
+  width: 60%;
+}
+
+.noMargin {
+  margin: 0px;
+}
+
+h3 {
+  font-weight: bolder;
+  color: rgb(255, 81, 0);
+  margin: 0px;
+}
+
+h5 {
+  font-weight: bold;
+  color: rgb(255, 81, 0);
+  margin: 0px 0px 5px 0px;
 }
 
 h2 {
@@ -22,7 +50,20 @@ h2 {
   text-align: center;
 }
 
-section {
+.pCarrito {
+  color: red;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.precio {
+  font-size: 28px;
+  color: #041a99;
+  text-align: center;
+  font-weight: bolder;
+}
+
+.section {
   background-color: #f7a48b;
   margin: 20px;
   border-radius: 5%;
