--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,6 +33,11 @@ body {
   margin: 0px;
 }
 
+h2 {
+  color: #076f7f;
+  text-align: center;
+}
+
 h3 {
   font-weight: bolder;
   color: rgb(255, 81, 0);
@@ -45,19 +50,19 @@ h5 {
   margin: 0px 0px 5px 0px;
 }
 
-h2 {
-  color: #076f7f;
-  text-align: center;
+h6 {
+  font-weight: bolder;
 }
 
 .pCarrito {
   color: red;
   font-weight: bolder;
   text-align: center;
+  margin: 0px;
 }
 
 .precio {
-  font-size: 28px;
+  font-size: 20px;
   color: #041a99;
   text-align: center;
   font-weight: bolder;
