--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -17,6 +17,10 @@
 .noMargin{
 	margin: 0px;
 }
+h2 {
+	color: #076f7f;
+	text-align: center;
+}
 h3{
 	font-weight: bolder;
 	color: rgb(255, 81, 0);
@@ -27,17 +31,17 @@ h5{
 	color: rgb(255, 81, 0);
 	margin: 0px 0px 5px 0px;
 }
-h2 {
-	color: #076f7f;
-	text-align: center;
+h6{
+	font-weight: bolder;
 }
 .pCarrito{
 	color: red;
 	font-weight: bolder;
 	text-align: center;
+	margin: 0px;
 }
 .precio{
-	font-size: 28px;
+	font-size: 20px;
 	color: #041a99;
 	text-align: center;
 	font-weight: bolder;
