--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -11,11 +11,22 @@
 		color: red;
 	}
 }
+#modalLabel{
+	color: rgb(255, 81, 0);
+}
+.bCant{
+	color: greenyellow;
+}
 .filtros{
 	width: 60%;
 }
 .noMargin{
 	margin: 0px;
+}
+.botonAgregarCarrito{
+	:hover{
+		padding: 6px;
+	}
 }
 h2 {
 	color: #076f7f;
