--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,57 +1,70 @@
-#modalLabel{
+#modalLabel {
 	font-weight: bolder;
 }
+
 .h1title {
 	color: red;
 	margin: 20px;
 	font-size: 48px;
 	font-weight: bolder;
+
 	a {
 		text-decoration: none;
 		color: red;
 	}
 }
-#modalLabel{
+
+#modalLabel {
 	color: rgb(255, 81, 0);
 }
-.bCant{
+
+.bCant {
 	color: greenyellow;
 }
-.filtros{
+
+.filtros {
 	width: 60%;
 }
-.noMargin{
+
+.noMargin {
 	margin: 0px;
 }
+
 h2 {
 	color: #076f7f;
 	text-align: center;
 }
-h3{
+
+h3 {
 	font-weight: bolder;
 	color: rgb(255, 81, 0);
 	margin: 0px;
 }
-h5{
+
+h5 {
 	font-weight: bold;
 	color: rgb(255, 81, 0);
 	margin: 0px 0px 5px 0px;
 }
-h6{
+
+h6 {
 	font-weight: bolder;
 }
-.pCarrito{
+
+.pCarrito {
 	color: red;
 	font-weight: bolder;
 	text-align: center;
 	margin: 0px;
 }
-.precio{
+
+.precio {
 	font-size: 20px;
 	color: #041a99;
 	text-align: center;
 	font-weight: bolder;
 }
+
 .section {
 	background-color: #f7a48b;
 	margin: 20px;
@@ -75,4 +88,13 @@ h6{
 			margin: 10px 0 10px 0;
 		}
 	}
+}
+
+.btn-animacion {
+	padding: 0px 12px;
+	transition: background-color 1s;
+}
+
+.btn-animacion.animacion {
+	background-color: #ff672b;
 }
